fixed spacing on editing buttons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -276,6 +276,9 @@ input.create_review_textbox {
 button.create_review_star_button {
 	background: none;
 	border: none;
+	margin-left: -8px;
+	margin-right: -8px;
+	margin-top: -6px;
 	font-family: Helvetica;
 	font-size: 50px;
 }
